tests/syntax-error/DuplicateTypeSignature2.vix
test : Int
test = 123
test : Int
